<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_order"
        android:icon="@drawable/love_book"
        android:title="@string/title_order" />

    <item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/qr_code"
        android:title="@string/title_scan" />

    <item
        android:id="@+id/navigation_vip"
        android:icon="@drawable/premium"
        android:title="@string/title_vip" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

</menu>