<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:orientation="vertical"
    android:scrollbars="none"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="200dp">

        </androidx.viewpager2.widget.ViewPager2>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/special"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/special"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:padding="10dp"/>

            <ImageView
                android:layout_width="15sp"
                android:layout_height="15sp"
                android:src="@drawable/rigth_arrow"
                android:layout_centerInParent="true"
                android:layout_alignParentEnd="true"
                android:layout_alignRight="@id/special"
                android:padding="10dp"/>

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_promo"
            android:layout_width="409dp"
            android:layout_height="180dp"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="201dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:id="@+id/ic_diskon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/diskon"
                android:layout_centerVertical="true" />

            <TextView
                android:id="@+id/tx_diskon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diskon"
                android:layout_toRightOf="@id/ic_diskon"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_centerInParent="true"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/tx_kuota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kuota"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:textStyle="bold"
                android:textColor="@color/grey"
                android:textSize="12sp"
                android:padding="10dp"/>
        </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/voucher"
                    android:layout_width="match_parent"
                    android:layout_height="100dp" />
            </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"
            android:layout_marginHorizontal="8dp"
            android:padding="10dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/baru"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/baru"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="15sp"
                android:layout_height="15sp"
                android:layout_centerInParent="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/rigth_arrow"/>
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_produk"
            android:layout_width="match_parent"
            android:layout_height="700dp"
            android:padding="10dp"
            android:clipToPadding="false"
            android:scrollbars="none"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/makanan"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/rigth_arrow"
                android:layout_centerInParent="true"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_makanan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:clipToPadding="false"
            android:scrollbars="none"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:padding="10dp"
            android:layout_marginTop="16dp">
        </androidx.viewpager2.widget.ViewPager2>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/voucher"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:padding="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"
                android:layout_marginHorizontal="8dp"
                android:padding="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:layout_margin="10dp"
                android:background="@drawable/curhat">

                <ImageView
                    android:layout_width="80sp"
                    android:layout_height="80sp"
                    android:src="@drawable/wa"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/curhat"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:layout_marginStart="6dp"/>
            </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ditjen"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="20dp"/>
    </LinearLayout>
    </LinearLayout>



</ScrollView>